--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,14 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./mad-minute-maths
 
       - name: Build
         run: npm run build
+        working-directory: ./mad-minute-maths
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+          publish_dir: ./mad-minute-maths/out
